--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
+    "@sendgrid/mail": "^6.5.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,10 +15,12 @@
     "@types/react-dom": "^16.9.0",
     "firebase": "^7.13.1",
     "firebaseui": "^4.5.0",
+    "ky": "^0.19.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-scripts": "3.4.1",
+    "twilio": "^3.41.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
