--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "firebase": "^7.13.1",
     "firebaseui": "^4.5.0",
+    "material-ui-dropzone": "^2.4.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
