--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "firebase": "^7.13.1",
     "firebaseui": "^4.5.0",
+    "material-ui-dropzone": "^2.4.9",
     "ky": "^0.19.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
