--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@sendgrid/mail": "^6.5.5",
+    "firebase": "^7.13.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "twilio": "^3.41.1"
