--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,14 +13,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/reactour": "^1.13.1",
+    "anno.js": "^1.0.3",
     "firebase": "^7.13.1",
     "firebaseui": "^4.5.0",
-    "material-ui-dropzone": "^2.4.9",
     "ky": "^0.19.0",
+    "material-ui-dropzone": "^2.4.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-scripts": "3.4.1",
+    "reactour": "^1.16.3",
+    "styled-components": "^5.0.1",
     "twilio": "^3.41.1",
     "typescript": "~3.7.2"
   },
