--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "senior-social-space",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,14 +9,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "firebase": "^7.13.1",
     "firebaseui": "^4.5.0",
-    "material-ui-dropzone": "^2.4.9",
     "ky": "^0.19.0",
+    "material-ui-dropzone": "^2.4.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
