--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.5.0",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@sendgrid/mail": "^6.5.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,6 +17,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/reactour": "^1.13.1",
+    "anno.js": "^1.0.3",
+    "date-fns": "^2.0.0-beta.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "firebase": "^7.13.1",
@@ -25,6 +30,8 @@
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-scripts": "3.4.1",
+    "reactour": "^1.16.3",
+    "styled-components": "^5.0.1",
     "twilio": "^3.41.1",
     "typescript": "~3.7.2"
   },
